# jni

./: .gitignore  App.cpp  CMakeLists.txt  Cargo.toml  README.md  pom.xml
include/: org_example_App.h
src/: lib.rs
src/main/java/org/example/: App.java
