[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
libc = "0.2.146"
tokio = { version = "1", features = ["time"] }
tokio-uring = { version ="0.4.0", features = ["bytes"] }

[lib]
crate_type = ["cdylib"]
